<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerviewData"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="170dp"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:listitem="@layout/recyclerview_item" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/add_word"
        android:src="@drawable/ic_baseline_add_24"
        app:backgroundTint="#4CAF50"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/buttonUusi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/add_Button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonPoistaKaikki"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/del_all_Button"
        app:layout_constraintBaseline_toBaselineOf="@+id/buttonUusi"
        app:layout_constraintStart_toEndOf="@+id/buttonUusi" />

    <Button
        android:id="@+id/buttonpoistaAlkio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/del_Button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonUusi" />

    <Button
        android:id="@+id/buttonpoistaHaettu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/del_searched"
        app:layout_constraintStart_toEndOf="@+id/buttonpoistaAlkio"
        app:layout_constraintTop_toBottomOf="@+id/buttonUusi" />

    <TextView
        android:id="@+id/textViewNumero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="Numero"
        app:layout_constraintBottom_toTopOf="@+id/recyclerview"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonpoistaAlkio" />

    <TextView
        android:id="@+id/textViewNimiInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="3dp"
        android:text="Nimi"
        app:layout_constraintBottom_toTopOf="@+id/recyclerview"
        app:layout_constraintStart_toEndOf="@+id/textViewNumero"
        app:layout_constraintTop_toBottomOf="@+id/buttonpoistaAlkio"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textViewNimiInfo2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="46dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="3dp"
        android:text="Painos (nro)"
        app:layout_constraintBottom_toTopOf="@+id/recyclerview"
        app:layout_constraintStart_toEndOf="@+id/textViewNimiInfo"
        app:layout_constraintTop_toBottomOf="@+id/buttonpoistaAlkio"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textViewHankittu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="22dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="3dp"
        android:text="Hankittu (pvm)"
        app:layout_constraintBottom_toTopOf="@+id/recyclerview"
        app:layout_constraintStart_toEndOf="@+id/textViewNimiInfo2"
        app:layout_constraintTop_toBottomOf="@+id/buttonpoistaAlkio"
        app:layout_constraintVertical_bias="0.75" />

    <EditText
        android:id="@+id/editTextPoistettavanNumero"
        android:layout_width="115dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="Poistettava numero"
        android:inputType="number"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonPoistaKaikki"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabQuestionMark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_baseline_question_mark_24" />

</androidx.constraintlayout.widget.ConstraintLayout>